# src/lib/route/models/RouteClimbResponse.ts
@@ -1,0 +1,102 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Live Course Control API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface RouteClimbResponse
+ */
+export interface RouteClimbResponse {
+    /**
+     * 
+     * @type {number}
+     * @memberof RouteClimbResponse
+     */
+    startDistanceInMeter: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof RouteClimbResponse
+     */
+    endDistanceInMeter: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof RouteClimbResponse
+     */
+    lengthInMeter: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof RouteClimbResponse
+     */
+    elevationGainInMeter: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof RouteClimbResponse
+     */
+    averageGradient: number;
+}
+
+/**
+ * Check if a given object implements the RouteClimbResponse interface.
+ */
+export function instanceOfRouteClimbResponse(value: object): value is RouteClimbResponse {
+    if (!('startDistanceInMeter' in value) || value['startDistanceInMeter'] === undefined) return false;
+    if (!('endDistanceInMeter' in value) || value['endDistanceInMeter'] === undefined) return false;
+    if (!('lengthInMeter' in value) || value['lengthInMeter'] === undefined) return false;
+    if (!('elevationGainInMeter' in value) || value['elevationGainInMeter'] === undefined) return false;
+    if (!('averageGradient' in value) || value['averageGradient'] === undefined) return false;
+    return true;
+}
+
+export function RouteClimbResponseFromJSON(json: any): RouteClimbResponse {
+    return RouteClimbResponseFromJSONTyped(json, false);
+}
+
+export function RouteClimbResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): RouteClimbResponse {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'startDistanceInMeter': json['startDistanceInMeter'],
+        'endDistanceInMeter': json['endDistanceInMeter'],
+        'lengthInMeter': json['lengthInMeter'],
+        'elevationGainInMeter': json['elevationGainInMeter'],
+        'averageGradient': json['averageGradient'],
+    };
+}
+
+export function RouteClimbResponseToJSON(json: any): RouteClimbResponse {
+    return RouteClimbResponseToJSONTyped(json, false);
+}
+
+export function RouteClimbResponseToJSONTyped(value?: RouteClimbResponse | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'startDistanceInMeter': value['startDistanceInMeter'],
+        'endDistanceInMeter': value['endDistanceInMeter'],
+        'lengthInMeter': value['lengthInMeter'],
+        'elevationGainInMeter': value['elevationGainInMeter'],
+        'averageGradient': value['averageGradient'],
+    };
+}
+
