# src/lib/route/models/index.ts
@@ -2,5 +2,6 @@
 /* eslint-disable */
 export * from './PatchRouteRequest';
 export * from './ProblemDetailResponse';
+export * from './RouteClimbResponse';
 export * from './RoutePointResponse';
 export * from './RouteResponse';
